# C-_server

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  main.cpp  multithreading.cpp  multithreading.h  regular_CMakeLists.txt  remove.sh  server.cpp  server.h  update.sh  utils.cpp  utils.h
apps/: CMakeLists.txt  main.cpp
include/: multithreading.h  server.h  utils.h
source/: multithreading.cpp  multithreading.h  utils.h
src/: CMakeLists.txt  server.cpp  utils.cpp
